welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: expected start of definition
override def run() {
         ^Array2:41: error: Unmatched closing brace '}' ignored here
}
^